<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.epam.tc</groupId>
  <artifactId>Dmitrii_Pikhurov</artifactId>
  <version>1.0-SNAPSHOT</version>


  <properties>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <testng.version>7.4.0</testng.version>
    <assertj-core.version>3.20.2</assertj-core.version>
    <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
    <maven-surefire-plugin.suiteXmlFile>
      ${project.build.testOutputDirectory}/testng/calculator.homework1.addition.subtraction.xml
    </maven-surefire-plugin.suiteXmlFile>
    <calculator.version>1</calculator.version>
    <webdrivermanager.version>4.4.3</webdrivermanager.version>
    <selenium-java.version>4.0.0-beta-4</selenium-java.version>
    <allure.version>2.13.2</allure.version>
    <aspectj.version>1.9.6</aspectj.version>
    <allure-maven.version>2.10.0</allure-maven.version>
    <jdi-light.version>1.3.12</jdi-light.version>
  </properties>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${maven-surefire-plugin.version}</version>
        <configuration>
          <argLine>
            --illegal-access=permit
            -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
          </argLine>
          <suiteXmlFiles>
            <suiteXmlFile>
              ${maven-surefire-plugin.suiteXmlFile}
            </suiteXmlFile>
          </suiteXmlFiles>
        </configuration>
        <dependencies>
          <dependency>
            <groupId>org.aspectj</groupId>
            <artifactId>aspectjweaver</artifactId>
            <version>${aspectj.version}</version>
          </dependency>
        </dependencies>
      </plugin>

      <plugin>
        <groupId>com.alexecollins.maven.plugin</groupId>
        <artifactId>script-maven-plugin</artifactId>
        <version>1.0.0</version>
        <executions>
          <execution>
            <phase>site</phase>
            <goals>
              <goal>execute</goal>
            </goals>
            <configuration>
              <language>javascript</language>
              <script>
                importPackage(java.awt);
                importPackage(java.net);
                var URI = Packages.java.net.URI;
                var html = new URI("http://localhost:63342/Dmitrii_Pikhurov/target/site/allure-maven-plugin/index.html")
                var Desktop = Packages.java.awt.Desktop;
                Desktop.getDesktop().browse(html);
              </script>
            </configuration>
          </execution>
        </executions>
        <dependencies>
          <dependency>
            <groupId>org.mozilla</groupId>
            <artifactId>rhino</artifactId>
            <version>1.7.13</version>
          </dependency>
        </dependencies>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>calculator-homework1-addition-subtraction-test</id>
      <properties>
        <maven-surefire-plugin.suiteXmlFile>
          ${project.build.testOutputDirectory}/testng/calculator.homework1.addition.subtraction.xml
        </maven-surefire-plugin.suiteXmlFile>
      </properties>
    </profile>

    <profile>
      <id>calculator-homework1-multiply-division-test</id>
      <properties>
        <maven-surefire-plugin.suiteXmlFile>
          ${project.build.testOutputDirectory}/testng/calculator.homework1.multiply.division.xml
        </maven-surefire-plugin.suiteXmlFile>
      </properties>
    </profile>

    <profile>
      <id>calculator-homework1-overall-test</id>
      <properties>
        <maven-surefire-plugin.suiteXmlFile>
          ${project.build.testOutputDirectory}/testng/calculator.homework1.overall.xml
        </maven-surefire-plugin.suiteXmlFile>
      </properties>
    </profile>
    <profile>
      <id>selenium-homework2-overall-test</id>
      <properties>
        <maven-surefire-plugin.suiteXmlFile>
          ${project.build.testOutputDirectory}/testng/selenium.homework2.overall.xml
        </maven-surefire-plugin.suiteXmlFile>
      </properties>
    </profile>
    <profile>
      <id>selenium-homework3-overall-void-pages-test</id>
      <properties>
        <maven-surefire-plugin.suiteXmlFile>
          ${project.build.testOutputDirectory}/testng/selenium.homework3.overall.void.page.object.xml
        </maven-surefire-plugin.suiteXmlFile>
      </properties>
    </profile>
    <profile>
      <id>selenium-homework3-overall-fluent-pages-test</id>
      <properties>
        <maven-surefire-plugin.suiteXmlFile>
          ${project.build.testOutputDirectory}/testng/selenium.homework3.overall.fluent.page.object.xml
        </maven-surefire-plugin.suiteXmlFile>
      </properties>
    </profile>
    <profile>
      <id>selenium-homework4-overall</id>
      <properties>
        <maven-surefire-plugin.suiteXmlFile>
          ${project.build.testOutputDirectory}/testng/selenium.homework4.overall.tests.xml
        </maven-surefire-plugin.suiteXmlFile>
      </properties>
    </profile>
    <profile>
      <id>selenium-homework4-failing</id>
      <properties>
        <maven-surefire-plugin.suiteXmlFile>
          ${project.build.testOutputDirectory}/testng/selenium.homework4.overall.failing.xml
        </maven-surefire-plugin.suiteXmlFile>
      </properties>
    </profile>
    <profile>
      <id>selenium-homework4-listener-test</id>
      <properties>
        <maven-surefire-plugin.suiteXmlFile>
          ${project.build.testOutputDirectory}/testng/selenium.homework4.listener.test.xml
        </maven-surefire-plugin.suiteXmlFile>
      </properties>
    </profile>
  </profiles>

  <dependencies>
    <dependency>
      <groupId>com</groupId>
      <artifactId>calculator</artifactId>
      <version>${calculator.version}</version>
      <scope>system</scope>
      <systemPath>${project.basedir}/src/test/resources/calculator-1.jar</systemPath>
    </dependency>
    <dependency>
      <groupId>org.testng</groupId>
      <artifactId>testng</artifactId>
      <version>${testng.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <version>${assertj-core.version}</version>
    </dependency>
    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-java</artifactId>
      <version>${selenium-java.version}</version>
    </dependency>
    <dependency>
      <groupId>io.github.bonigarcia</groupId>
      <artifactId>webdrivermanager</artifactId>
      <version>${webdrivermanager.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>io.qameta.allure</groupId>
      <artifactId>allure-testng</artifactId>
      <version>${allure.version}</version>
    </dependency>
    <dependency>
      <groupId>com.epam.jdi</groupId>
      <artifactId>jdi-light-html</artifactId>
      <version>${jdi-light.version}</version>
    </dependency>
  </dependencies>

  <reporting>
    <excludeDefaults>true</excludeDefaults>
    <plugins>
      <plugin>
        <groupId>io.qameta.allure</groupId>
        <artifactId>allure-maven</artifactId>
        <version>${allure-maven.version}</version>
        <configuration>
          <reportVersion>${allure.version}</reportVersion>
        </configuration>
      </plugin>
    </plugins>
  </reporting>

</project>